--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="StopWatchHub - Precision time tools including Stopwatch, Countdown Timer, World Clock, and Pomodoro Timer for students and professionals.">
+    <meta name="description"
+        content="StopWatchHub - Precision time tools including Stopwatch, Countdown Timer, World Clock, and Pomodoro Timer for students and professionals.">
     <title>StopWatchHub - Online Timing Tools</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=JetBrains+Mono:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <!-- Header -->
@@ -34,7 +39,7 @@
 
     <!-- Main Content Area -->
     <main class="app-container">
-        
+
         <!-- Stopwatch Section -->
         <section id="stopwatch" class="tool-section active">
             <div class="card">
@@ -138,20 +143,22 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="footer-links">
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
-            <a href="#privacy">Privacy Policy</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="privacy.html">Privacy Policy</a>
         </div>
         <div class="legal-text">
             <h3>Privacy Policy</h3>
-            <p>This site does not collect personal data. Cookies may be used by third-party vendors, including Google, to serve ads based on prior visits to our website.</p>
+            <p>This site does not collect personal data. Cookies may be used by third-party vendors, including Google,
+                to serve ads based on prior visits to our website.</p>
         </div>
         <p>&copy; 2024 StopWatchHub. All rights reserved.</p>
-        
+
         <!-- AdSense Footer Ad -->
         <div class="ad-placeholder mini">Footer Ad</div>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 </html>
