Change contact email address in contact.html
Updated the contact email address in the contact page.

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                     <h3 style="color: var(--accent-color); margin-bottom: 1rem;">Email Us</h3>
                     <p style="font-size: 1.25rem; font-weight: bold; font-family: var(--font-mono);">
                         <a href="mailto:contact@stopwatchhub.com"
-                            style="color: white; text-decoration: none;">contact@stopwatchhub.com</a>
+                            style="color: white; text-decoration: none;">saniasif2345678@gmail.com</a>
                     </p>
                 </div>
 
@@ -88,5 +88,6 @@
     </footer>
 
 </body>
+
 
 </html>
